apps/pacman/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pacman
  labels:
    app.kubernetes.io/name: pacman              # Name der Anwendung, dient als Selector-Ziel für das Deployment
    app.kubernetes.io/component: application     # Rolle dieser Ressource innerhalb der App (hier: die Anwendung selbst)
    app.kubernetes.io/part-of: pacman-platform    # Übergeordnetes System, zu dem diese Ressource gehört
    app.kubernetes.io/managed-by: argocd          # Tool, das Deployment/Sync steuert (GitOps via ArgoCD)
    responsibility: devops                        # Team, das für Betrieb/Wartung zuständig ist

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: pacman

  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
