apps/pacman/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: pacman.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pacman
                port:
                  number: 80
